--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -9,16 +9,16 @@
 
     <ImageView
         android:id="@+id/photo"
-        android:layout_width="164dp"
-        android:layout_height="176dp"
+        android:layout_width="182dp"
+        android:layout_height="194dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         app:srcCompat="@drawable/man" />
 
     <ImageView
         android:id="@+id/i_name"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_below="@+id/photo"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="15dp"
@@ -26,29 +26,21 @@
 
     <ImageView
         android:id="@+id/i_age"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_below="@+id/i_name"
         android:layout_marginLeft="25dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="20dp"
         app:srcCompat="@drawable/age" />
 
-    <ImageView
-        android:id="@+id/i_gender"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_below="@+id/i_age"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="18dp"
-        app:srcCompat="@drawable/gender" />
 
     <ImageView
         android:id="@+id/i_email"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_below="@+id/i_gender"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/i_age"
         android:layout_marginLeft="25dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="20dp"
         app:srcCompat="@drawable/email" />
 
     <ImageView
@@ -57,68 +49,57 @@
         android:layout_height="50dp"
         android:layout_below="@+id/i_email"
         android:layout_marginLeft="25dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="20dp"
         app:srcCompat="@drawable/pass" />
 
-    <EditText
+    <TextView
         android:id="@+id/e_name"
         android:layout_width="290dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/photo"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="28dp"
         android:layout_toRightOf="@+id/i_name"
         android:text="Name"
         android:textColor="@color/black"
-        android:textSize="18dp" />
+        android:textSize="20dp" />
 
-    <EditText
+    <TextView
         android:id="@+id/e_age"
         android:layout_width="290dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/i_name"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="29dp"
         android:layout_toRightOf="@+id/i_age"
         android:text="Age"
         android:textColor="@color/black"
-        android:textSize="18dp" />
+        android:textSize="20dp" />
 
-    <EditText
-        android:id="@+id/e_gender"
+
+    <TextView
+        android:id="@+id/e_email"
         android:layout_width="290dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/i_age"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="21dp"
-        android:layout_toRightOf="@+id/i_gender"
-        android:text="Gender"
-        android:textColor="@color/black"
-        android:textSize="18dp" />
-
-    <EditText
-        android:id="@+id/e_email"
-        android:layout_width="290dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/i_gender"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="28dp"
         android:layout_toRightOf="@+id/i_email"
         android:text="Email"
         android:textColor="@color/black"
-        android:textSize="18dp" />
+        android:textSize="20dp" />
 
-    <EditText
+    <TextView
         android:id="@+id/e_pass"
         android:layout_width="290dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/i_email"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="33dp"
         android:layout_toRightOf="@+id/i_pass"
         android:text="Password"
         android:textColor="@color/black"
-        android:textSize="18dp" />
+        android:textSize="20dp" />
 
     <Button
         android:id="@+id/button"
@@ -128,6 +109,15 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="21dp"
         android:text="Feedback" />
+
+    <Button
+        android:id="@+id/out"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="18dp"
+        android:text="Logout" />
 
 
 
