--- a/app/src/main/res/layout/activity_graph_page.xml
+++ b/app/src/main/res/layout/activity_graph_page.xml
@@ -1,129 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity2">
+    android:orientation="vertical"
+    tools:context=".GraphPage">
+
+    <TextView
+        android:id="@+id/day"
+        android:layout_width="129dp"
+        android:layout_height="30dp"
+        android:text="DAY"
+        android:layout_marginLeft="140dp"
+        android:layout_marginTop="15dp"
+        android:gravity="center"
+        android:textColor="@color/teal_200"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/num"
+        android:layout_width="129dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="140dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:textColor="@color/teal_200"
+        android:textSize="24sp" />
+
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="271dp"
-        android:layout_height="177dp"
-        android:rotation="117"
-        android:rotationY="3"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.259" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="129dp"
-        android:layout_height="43dp"
-        android:text="DAY 1"
-        android:textColor="@color/teal_200"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.595"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.107" />
+        android:layout_height="170dp"
+        android:layout_marginLeft="67dp"
+        android:layout_marginTop="30dp"
+        android:gravity="center" />
 
     <View
         android:id="@+id/divider"
         android:layout_width="409dp"
         android:layout_height="5dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.526" />
+        android:layout_marginTop="20dp"
+        android:background="?android:attr/listDivider" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="189dp"
-        android:layout_height="188dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.927"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.837"
-        app:srcCompat="@drawable/moeny_saved" />
 
-    <TextView
-        android:id="@+id/textView2"
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp" >
+
+        <ImageView
+            android:id="@+id/watch"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:layout_marginLeft="59dp"
+            app:srcCompat="@drawable/icons8_stopwatch_100" />
+
+        <ImageView
+            android:id="@+id/cash"
+            android:layout_width="105dp"
+            android:layout_height="105dp"
+            android:layout_marginLeft="82dp"
+            android:layout_toRightOf="@+id/watch"
+            app:srcCompat="@drawable/moeny_saved" />
+
+
+        <TextView
+            android:id="@+id/smoke"
+            android:layout_width="150dp"
+            android:layout_height="55dp"
+            android:layout_below="@+id/watch"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:text="Smoke Free Since"
+            android:textColor="@color/teal_200"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/money"
+            android:layout_width="150dp"
+            android:layout_height="25dp"
+            android:layout_below="@id/cash"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@+id/smoke"
+            android:gravity="center"
+            android:text="Money Saved"
+            android:textColor="@color/teal_200"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/saved"
+            android:layout_width="173dp"
+            android:layout_height="39dp"
+            android:layout_below="@+id/money"
+            android:layout_marginLeft="220dp"
+            android:layout_marginTop="10dp"
+            android:inputType="textPersonName"
+            android:textSize="14sp" />
+
+    </RelativeLayout>
+
+
+   <Chronometer
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:id="@+id/chronometer"
+       android:format="00:00:00"
+       android:layout_marginLeft="62dp"
+       android:textSize="27dp" />
+
+    <Button
+        android:id="@+id/shuru"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Smoke Free Since"
-        android:textSize="20sp"
-        android:textColor="@color/teal_200"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.063"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.944" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="155dp"
-        android:layout_height="24dp"
-        android:text="Money Saved"
-        android:textSize="20sp"
-        android:textColor="@color/teal_200"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.937"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.944" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="173dp"
-        android:layout_height="39dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:textSize="14sp"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.067"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.935"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="171dp"
-        android:layout_height="193dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintHorizontal_bias="0.112"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.845"
-        app:srcCompat="@drawable/icons8_stopwatch_100" />
+        android:layout_marginLeft="69dp"
+        android:layout_marginTop="10dp"
+        android:text="Start" />
 
 
+</LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
