--- a/app/src/main/res/layout/activity_rate.xml
+++ b/app/src/main/res/layout/activity_rate.xml
@@ -7,6 +7,14 @@
     android:orientation="vertical"
     tools:context=".Rate">
 
+    <View
+        android:id="@+id/divider"
+        android:layout_width="409dp"
+        android:layout_height="3dp"
+        android:layout_marginTop="20dp"
+        android:background="?android:attr/listDivider"
+        android:foregroundTint="@color/black"/>
+
     <EditText
         android:id="@+id/namedata"
         android:layout_width="match_parent"
@@ -19,22 +27,19 @@
         tools:layout_editor_absoluteX="-53dp"
         tools:layout_editor_absoluteY="64dp" />
 
-    <EditText
-        android:id="@+id/emaildata"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:ems="10"
-        android:hint="Email"
-        android:inputType="textPersonName"
-        android:textSize="20sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="-16dp"
-        tools:layout_editor_absoluteY="181dp" />
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="409dp"
+        android:layout_height="3dp"
+        android:layout_marginTop="20dp"
+        android:background="?android:attr/listDivider"
+        android:foregroundTint="@color/black"/>
 
     <EditText
         android:id="@+id/messagedata"
         android:layout_width="match_parent"
-        android:layout_height="86dp"
+        android:layout_height="250dp"
+        android:gravity="top"
         android:ems="10"
         android:hint="Message"
         android:inputType="textPersonName"
@@ -49,20 +54,10 @@
         android:layout_height="74dp"
         android:text="Send to server"
         android:textSize="16sp"
+        android:layout_marginTop="20dp"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="-16dp"
         tools:layout_editor_absoluteY="417dp" />
-
-    <Button
-        android:id="@+id/btn_details"
-        android:layout_width="match_parent"
-        android:layout_height="74dp"
-        android:enabled="false"
-        android:text="View send details"
-        android:textSize="16sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="46dp"
-        tools:layout_editor_absoluteY="601dp" />
 
 
 </LinearLayout>
