--- a/app/src/main/res/layout/activity_graph_page.xml
+++ b/app/src/main/res/layout/activity_graph_page.xml
@@ -83,23 +83,24 @@
             android:layout_width="150dp"
             android:layout_height="25dp"
             android:layout_below="@id/cash"
-            android:layout_marginLeft="30dp"
+            android:layout_marginLeft="36dp"
             android:layout_marginTop="10dp"
             android:layout_toRightOf="@+id/smoke"
             android:gravity="center"
-            android:text="Money Saved"
+            android:text="Money spent"
             android:textColor="@color/teal_200"
             android:textSize="20sp" />
 
-        <EditText
+        <TextView
             android:id="@+id/saved"
-            android:layout_width="173dp"
-            android:layout_height="39dp"
+            android:layout_width="wrap_content"
+            android:layout_height="42dp"
             android:layout_below="@+id/money"
-            android:layout_marginLeft="220dp"
-            android:layout_marginTop="10dp"
-            android:inputType="textPersonName"
-            android:textSize="14sp" />
+            android:layout_marginLeft="254dp"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:text="Click to know!"
+            android:textSize="17dp" />
 
     </RelativeLayout>
 
@@ -109,8 +110,8 @@
        android:layout_height="wrap_content"
        android:id="@+id/chronometer"
        android:format="00:00:00"
-       android:layout_marginLeft="62dp"
-       android:textSize="27dp" />
+       android:layout_marginLeft="68dp"
+       android:textSize="23dp" />
 
     <Button
         android:id="@+id/shuru"
